# wallcrossing

./: .gitignore  README.md  config.py  main.py  movinet-stream-scoop-v1.ipynb  pyproject.toml
data_tuong/: demo_draw.py  draw_line.py
deploy/: wallcrossing.service
tests/: test_alerting.py  test_config.py  test_dataset_capture.py  test_evidence.py  test_geometry.py  test_motion_filter.py  test_pipeline.py  test_postprocess.py  test_roi.py  test_rtsp_reader.py  test_storage_quota.py
tools/: check_decode.py  coco_to_cameras_config.py  convert_movinet_rknn.py  convert_rknn.py  test_rknn_movinet.py  test_rknn_person.py
wallcrossing/alerts/: alerting.py  evidence.py
wallcrossing/core/: config_loader.py  models.py
wallcrossing/detection/: detector.py  postprocess.py
wallcrossing/runtime/: dataset_capture.py  motion_filter.py  pipeline.py  roi.py  scheduler.py  storage_quota.py  systemd_notify.py
wallcrossing/services/: wall_contact.py
wallcrossing/streams/: rtsp_reader.py
wallcrossing/utils/: logging_setup.py
