[project]
name = "wallcrossing"
version = "0.1.0"
description = "Wall-crossing detection pipeline for RTSP streams on RK3588 AIBox"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pydantic>=2.5",
]

[project.optional-dependencies]
# Host x86 (training/convert + ultralytics fallback inference for dev)
host = [
    "ultralytics>=8.3",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wallcrossing*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
